--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "sequelize": "^6.12.0-alpha.1"
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
+    "path": "^0.12.7",
+    "sequelize": "^5.21.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
