fix cors and create get account info api

--- a/configs/config.json
+++ b/configs/config.json
@@ -8,7 +8,7 @@
  
         "database": "citizenv",
  
-        "host": "localhost",
+        "host": "103.81.84.51",
  
         "dialect": "mysql"
  
